# mc-mass

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  clean.sh  deb_clean.sh  deb_create.sh  deb_mc-mass_amd64.control  generate_coverage-report.sh  make_zip.bat  mc-mass.desktop  mc-mass.pro  mc-mass_tests.pri  mc-mass_tests.pro  out_cpplint.txt  run_cpplint.sh  run_tests.sh
.devcontainer/: devcontainer.json
data/aw101/: aw101.mcmass  aw101.xml
data/c130/: c130.mcmass  c130.xml
data/c172/: c172.mcmass  c172.xml
data/f16c/: f16c.mcmass  f16c.xml
data/uh60/: uh60.mcmass  uh60.xml
docs/tex/: Makefile  bibliography.bib  license_cc-by-sa.tex  mc-mass.tex  mc-mass_0.tex  mc-mass_1.tex  mc-mass_2.tex  mc-mass_3.tex  mc-mass_4.tex
src/: Aircraft.cpp  Aircraft.h  AircraftData.h  AircraftFile.cpp  AircraftFile.h  CMakeLists.txt  DataFile.cpp  DataFile.h  Document.cpp  Document.h  Types.h  Xml.cpp  Xml.h  defs.h  main.cpp  mc-mass.pro  mc-mass.rc
src/cgi/: Builder.cpp  Builder.h  CGI.cpp  CGI.h  CMakeLists.txt  Colors.cpp  Colors.h  Component.cpp  Component.h  Data.h  Geometry.cpp  Geometry.h  Grid.cpp  Grid.h  HUD.cpp  HUD.h  Highlight.cpp  Highlight.h  Manager.cpp  Manager.h  ManipulatorOrbit.cpp  ManipulatorOrbit.h  ManipulatorTrack.cpp  ManipulatorTrack.h  Model.cpp  Model.h  ViewGizmo.cpp  ViewGizmo.h  cgi.pri
src/components/: AllElse.cpp  AllElse.h  Component.cpp  Component.h  Engine.cpp  Engine.h  Fuselage.cpp  Fuselage.h  GearMain.cpp  GearMain.h  GearNose.cpp  GearNose.h  RotorDrive.cpp  RotorDrive.h  RotorHub.cpp  RotorHub.h  RotorMain.cpp  RotorMain.h  RotorTail.cpp  RotorTail.h  TailHor.cpp  TailHor.h  TailVer.cpp  TailVer.h  Wing.cpp  Wing.h
src/gui/: CMakeLists.txt  ComboUnits.cpp  ComboUnits.h  ComboUnitsAltitude.cpp  ComboUnitsAltitude.h  ComboUnitsAngle.cpp  ComboUnitsAngle.h  ComboUnitsArea.cpp  ComboUnitsArea.h  ComboUnitsInertia.cpp  ComboUnitsInertia.h  ComboUnitsLength.cpp  ComboUnitsLength.h  ComboUnitsMass.cpp  ComboUnitsMass.h  ComboUnitsPower.cpp  ComboUnitsPower.h  ComboUnitsSpeed.cpp  ComboUnitsSpeed.h  ComboUnitsVelocity.cpp  ComboUnitsVelocity.h  ComboUnitsVolume.cpp  ComboUnitsVolume.h  DialogEdit.cpp  DialogEdit.h  DialogEdit.ui  DockWidgetComponents.cpp  DockWidgetComponents.h  DockWidgetComponents.ui  DockWidgetParams.cpp  DockWidgetParams.h  DockWidgetParams.ui  DockWidgetResults.cpp  DockWidgetResults.h  DockWidgetResults.ui  GraphicsWindowQt.cpp  GraphicsWindowQt.h  KeyMap.cpp  KeyMap.h  MainWindow.cpp  (+9 more)
src/gui/html/: about.html
src/mass/: Aircraft.cpp  Aircraft.h  AllElse.cpp  AllElse.h  Atmosphere.cpp  Atmosphere.h  CMakeLists.txt  Component.cpp  Component.h  Cuboid.cpp  Cuboid.h  Engine.cpp  Engine.h  Fuselage.cpp  Fuselage.h  GearMain.cpp  GearMain.h  GearNose.cpp  GearNose.h  Matrix3x3.cpp  Matrix3x3.h  RotorDrive.cpp  RotorDrive.h  RotorHub.cpp  RotorHub.h  RotorMain.cpp  RotorMain.h  RotorTail.cpp  RotorTail.h  Steiner.cpp  Steiner.h  TailHor.cpp  TailHor.h  TailVer.cpp  TailVer.h  Units.h  Vector3.cpp  Vector3.h  Wing.cpp  Wing.h  (+1 more)
src/utils/: Atmosphere.cpp  Atmosphere.h  CMakeLists.txt  Cuboid.cpp  Cuboid.h  FirstMomentOfMass.cpp  FirstMomentOfMass.h  InertiaMatrix.cpp  InertiaMatrix.h  Matrix3x3.cpp  Matrix3x3.h  ParallelAxisInertia.cpp  ParallelAxisInertia.h  ParallelAxisTheorem.h  PositionVector.cpp  PositionVector.h  Units.h  Vector3.cpp  Vector3.h  XmlUtils.cpp  XmlUtils.h  units_extra.h  utils.pri
tests/: CMakeLists.txt  ExampleData.cpp  ExampleData.h  tests.pri  tests.pro
tests/components/: TestAllElse.cpp
tests/mass/: TestAllElse.cpp
tests/utils/: TestMatrix3x3.cpp  TestVector3.cpp
